--- a/mathjax-editor.html
+++ b/mathjax-editor.html
@@ -2,6 +2,16 @@
 <html lang="ja">
 
 <head>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-144211946-1"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'UA-144211946-1');
+    </script>
+
     <meta charset="utf-8">
     <title>ブログエディタ(Mathjax & Markdown)</title>
 
@@ -25,6 +35,19 @@
     </div>
 </div>
 <button id="copy-button" class="btn btn-secondary">編集画面にあるテキストをコピー</button>
+
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2661815267943239"
+     crossorigin="anonymous"></script>
+<!-- フッタ広告 -->
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-client="ca-pub-2661815267943239"
+     data-ad-slot="4130245026"
+     data-ad-format="auto"
+     data-full-width-responsive="true"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
 
 <!-- <script type="text/javascript" src="https://code.jquery.com/jquery-3.4.1.min.js"></script> -->
 <script src="https://code.jquery.com/jquery-3.6.0.min.js" 
