htmlを読み込み可能に

--- a/mathjax-editor.html
+++ b/mathjax-editor.html
@@ -29,7 +29,7 @@
 </head>
 
 <body>
-<input type="file" accept=".md" id="mdfile" class="btn btn-secondary">
+<input type="file" accept=".md,.html" id="mdfile" class="btn btn-secondary">
 <!-- <input id="upfile_btn" type="button" value="Markdownファイルをアップロード"> -->
 <!--<button id="reload-btn" class="btn btn-secondary">ファイルの再読み込み</button>-->
 <div class="row">
